# execsnoop-poc

./: Cargo.toml  README.md
execsnoop-poc/: Cargo.toml
execsnoop-poc-common/: Cargo.toml
execsnoop-poc-common/src/: lib.rs
execsnoop-poc-ebpf/: Cargo.toml
execsnoop-poc-ebpf/src/: main.rs  vmlinux.rs
execsnoop-poc/src/: main.rs
xtask/src/: build_ebpf.rs  run.rs
