[package]
name = "execsnoop-poc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
execsnoop-poc-common = { path = "../execsnoop-poc-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
bytes = "1.4.0"
dashmap = "5.5.0"

[[bin]]
name = "execsnoop-poc"
path = "src/main.rs"
